수정: 앱 기동 실패 해결 및 비동기 실행기 가상 스레드 전환
- jakarta.servlet-api runtimeOnly 추가: Spring 7 ClassFileMetadataReader가
  named module(tomcat-embed-core) 내 jakarta/servlet/Filter.class를
  getResourceAsStream으로 읽지 못하는 Java 25 모듈 캡슐화 문제 해결
- gradle.lockfile, verification-metadata.xml: 신규 의존성 잠금·체크섬 반영
- AsyncConfig: ThreadPoolTaskExecutor → SimpleAsyncTaskExecutor(virtualThreads=true)
  전역 spring.threads.virtual.enabled=true 설정과 일관성 확보
- AdminSecurityConfig: .collect(Collectors.toList()) → .toList() (Java 16+)
- relay/relay_service.py 제거

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>